--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
       <div id="myP5">
       </div>
 
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html?fileName=collisions5.js">Collisions - point and pixel overlap</a></li>
-
-
-
-
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html?fileName=sketch.js">Restart game</a></li>
 
   </div>
 
 
 
     <pre id="editor">
-      //file not found
+
     </pre>
     </div>
 
